[package]
name = "online-action-product-backend"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration"}
actix-cors = "0.7.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9.0"
actix-ws = "0.3.0"
async-trait = "0.1.86"
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures-util = "0.3.31"
lazy_static = "1.5.0"
lettre = "0.11.13"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
sea-orm = { version = "1.1.5", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.2", features = ["v4"] }
